--- a/templates/base.html
+++ b/templates/base.html
@@ -75,7 +75,7 @@
 
     <!-- Header Section -->
     <header>
-        Hello Akshay
+        Hello Abdul Jabbar
     </header>
 
     <!-- Content Container -->
